tests/NormalTests/paczka1/fuzzy1/90990769.err
Error in line 5: KKGn0fAK4X A86 20,5
Error in line 9: KKGn0fAK4X S950 33,2
Error in line 12: A705 A86 61,8
Error in line 18: iSFSrxxf A86 35,5
Error in line 13: A705 S950 64,1
Error in line 23: KKGn0fAK4X S950 69,8
Error in line 22: A705 A705 87,5
Error in line 30: A705 A642 78,9
Error in line 21: KJKQeXnv7 A705 97,8
Error in line 35: KJKQeXnv7 A642 82,8
